--- a/js/countries.html
+++ b/js/countries.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countries Name</title>
+    <link rel="stylesheet" href="css/countries.css">
 </head>
 <body>
     <header>
@@ -12,6 +13,12 @@
     </header>
     <main>
         <section>
+            <section>
+                <h3>Country Details</h3>
+                <div id="Country_DetailsID">
+                    
+                </div>
+            </section>
             <div id="counteries_container"></div>
         </section>
     </main>
