--- a/meal.html
+++ b/meal.html
@@ -15,14 +15,9 @@
     <main>
         <section>
             <h2>Meal Details </h2>
-            <div id="details_container">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
+            <div id="details_container" style="width: 18rem;">
+                <div class="card" >
+                    
                   </div>
 
             </div>
