--- a/js/practies/practise1.html
+++ b/js/practies/practise1.html
@@ -4,24 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kanye Quotes</title>
+    <title>Practise One</title>
 </head>
 <body>
-    <header>
-        <h1>Fresh Quptes from Kanye Uncle </h1>
-    </header>
+    <header>Practies One</header>
     <main>
         <section>
-            <blockquote id="quote">
-
-            </blockquote>
-
-            <button onclick="loadQuote()">New Quote</button>
-            
+            <p id="paragraphDisplay"></p>
+            <button onclick="player_Name()">Player Name</button>
         </section>
     </main>
 
-
-    <script src="js/quote.js"></script>
+    <script src="practise1.js"></script>
 </body>
 </html>
